fix map contrast color error on wave

--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ video {
     width: 20px; /* Adjust based on your design */
     height: 20px; /* Adjust based on your design */
     background-color: red;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     border-radius: 50%;
     transform: translate(-50%, -50%); /* Centers the pin */
